salesforce/force-app/main/default/objects/Category__mdt/Category__mdt.object-meta.xml
<CustomObject>
    <description>Phase 20b — Display metadata for the four parent category cards on the dashboard (Revenue Leakage, Governance Risk, Pipeline Risk, Pricing Discipline). One record per category carries Title, Subtitle, Icon, Accent color, and SummaryMode. Replaces the hardcoded CATEGORY_META map in riskCategoryCard.js.</description>
    <label>Category</label>
    <pluralLabel>Categories</pluralLabel>
</CustomObject>