salesforce/force-app/main/default/objects/Category__mdt/fields/Accent__c.field-meta.xml
<CustomField>
    <fullName>Accent__c</fullName>
    <label>Accent</label>
    <description>Color theme key consumed by the LWC CSS (amber | sky | emerald | rose | violet). Maps to op-rc__*--amber etc.</description>
    <type>Text</type><length>20</length>
</CustomField>