salesforce/force-app/main/default/objects/Category__mdt/fields/CategoryKey__c.field-meta.xml
<CustomField>
    <fullName>CategoryKey__c</fullName>
    <label>Category Key</label>
    <description>Stable identifier (revenue_leakage, governance, pipeline, pricing). Matches Detector__mdt.Category__c values.</description>
    <type>Text</type><length>40</length><required>true</required><unique>true</unique><externalId>true</externalId>
</CustomField>