salesforce/force-app/main/default/objects/Category__mdt/fields/IconName__c.field-meta.xml
<CustomField>
    <fullName>IconName__c</fullName>
    <label>Icon Name</label>
    <description>SLDS icon name (e.g. utility:shield, utility:trending).</description>
    <type>Text</type><length>80</length>
</CustomField>