salesforce/force-app/main/default/objects/Category__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Active</label>
    <type>Checkbox</type><defaultValue>true</defaultValue>
</CustomField>