salesforce/force-app/main/default/objects/Category__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <description>Display order. Lower numbers render first.</description>
    <type>Number</type><precision>3</precision><scale>0</scale>
</CustomField>