salesforce/force-app/main/default/objects/Category__mdt/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <label>Subtitle</label>
    <description>Sub-heading shown below the title; explains what the category captures.</description>
    <type>LongTextArea</type><length>500</length><visibleLines>2</visibleLines>
</CustomField>