salesforce/force-app/main/default/objects/Category__mdt/fields/SummaryMode__c.field-meta.xml
<CustomField>
    <fullName>SummaryMode__c</fullName>
    <label>Summary Mode</label>
    <description>How to render the headline KPI on this card: "count" (number of findings) or "arr" ($ at risk).</description>
    <type>Text</type><length>20</length>
</CustomField>