salesforce/force-app/main/default/objects/Category__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <description>Card heading (e.g. "Governance Risk").</description>
    <type>Text</type><length>80</length>
</CustomField>